src/test/deca/codegen/valid/expr/test_soustraction_float.deca
// Description:
//    tests de la soustraction de flottants
//
// Resultats:
//
// Historique:
// cree le 12/01/2024

{
    float i = 1.0;
    float j = 2.0;
    float k = i - j;
}

